--- a/src/frontend/Chat.fxml
+++ b/src/frontend/Chat.fxml
@@ -31,7 +31,7 @@
         <Pane layoutX="1.0" layoutY="1.0" prefHeight="576.0" prefWidth="91.0" style="-fx-background-color: #1D3557; -fx-background-radius: 15;" />
         <ListView fx:id="listView" layoutX="93.0" prefHeight="571.0" prefWidth="161.0" />
       <FontAwesomeIconView fill="#1d3557" glyphName="SEARCH" layoutX="222.0" layoutY="27.0" />
-      <FontAwesomeIconView fill="#fca311" glyphName="PLUS" layoutX="222.0" layoutY="506.0" size="30" text="+">
+      <FontAwesomeIconView fill="#fca311" glyphName="PLUS" layoutX="222.0" layoutY="506.0" size="30" text="+" onMouseClicked="#submit">
          <font>
             <Font size="55.0" />
          </font>
@@ -48,7 +48,7 @@
         <ImageView fitHeight="51.0" fitWidth="91.0" layoutX="20.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true" />
     </Pane>
     <FontAwesomeIconView fill="#fca311" glyphName="FILE" layoutX="693.0" layoutY="517.0" />
-   <Button id="emoji" fx:id="chat_textfield_emoji" layoutX="631.0" layoutY="517.0"  text="😀" />
+   <Button id="emoji" fx:id="chat_textfield_emoji" layoutX="631.0" layoutY="517.0"  text="😀" onAction="#handle"/>
    <FontAwesomeIconView fill="#1d3557" glyphName="SEND" layoutX="720.0" layoutY="517.0" />
    <FontAwesomeIconView fill="#fca311" glyphName="IMAGE" layoutX="660.0" layoutY="517.0" text="" />
 
